# retrieval-evaluation-and-optimization-framework

./: .gitignore  ARCHITECTURE.md  LICENSE  PROJECT_STATUS.md  README.md  pyproject.toml
configs/: default.yaml  grid_search.yaml  sweep.yaml
configs/examples/: benchmark_experiment.yaml  bm25_only.yaml  dense_retrieval.yaml  grid_search.yaml  hybrid_retrieval.yaml  hyde_enabled.yaml  large_collection.yaml  optuna_search_space.yaml  optuna_search_space_bm25.yaml  optuna_search_space_dense.yaml  optuna_search_space_hybrid.yaml  parameter_sweep.yaml  query_rewrite.yaml  reranker_enabled.yaml  rewrite_hyde_chain.yaml  small_collection.yaml
data/cache/embeddings/: hashing-fallback.keys.json  hashing-fallback.npy  (+2 more)
data/embeddings/: metadata.json  vectors.npy
data/evaluation/: insurance_eval_dataset.json  legal_evaluation_dataset.json  news_evaluation_dataset.json  policy_eval_dataset.json
examples/: README.md
examples/sample_data/: benchmark_config.yaml  evaluation_dataset.yaml  retrieval_queries.yaml
examples/workflows/: workflow_1_retrieval_pipeline.md  workflow_2_benchmark_reporting.md  workflow_3_sweep_comparison_tradeoffs.md
scripts/: run_baseline_domain_flow.py  run_final_framework.sh
src/retrieval_evaluation_framework/: __init__.py  logging.py  models.py  pipeline.py
tests/: __init__.py  benchmark_helpers.py  conftest.py  test_api.py  test_benchmark_api.py  test_benchmark_cli.py  test_benchmarking.py  test_chunking.py  test_config.py  test_end_to_end_workflow.py  test_evaluation.py  test_ingestion.py  test_pipeline.py  test_preprocessing.py  test_query_enhancement.py
tests/fixtures/: sample.md  sample.txt
(+87 files in other folders)
